<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@id/head_card_group_ly"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:background="@drawable/head_bg_shape"
   		android:orientation="vertical"
        >
        <LinearLayout
	        android:layout_width="fill_parent"
	   		android:layout_height="40dp"
	   		android:orientation="horizontal">
	   		<TextView 
   		    	android:id="@id/head_chat_me"
   		    	android:gravity="center"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:background="@color/bg_head"
	            android:textSize="16sp"
	            android:textColor="@color/bg_head_text"
	            android:text="@string/head_chat_me"/>
	        <TextView 
	            android:id="@id/head_found"
	            android:gravity="center"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:background="@color/bg_head"
	            android:textSize="16sp"
	            android:text="@string/head_found"/>
	        <TextView 
	            android:id="@id/head_contacts"
	            android:gravity="center"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:background="@color/bg_head"
	            android:textSize="16sp"
	            android:text="@string/head_contacts"/>
    	</LinearLayout>
    	<com.example.wechatlesson.view.HeadLineViewGroup 
        	android:id="@id/head_line_view_group"
        	android:layout_width="fill_parent"
    		android:layout_height="4dp"
    		android:background="@color/bg_head"
    		android:layout_marginBottom="1dp"
        ></com.example.wechatlesson.view.HeadLineViewGroup>
    </LinearLayout>

    <com.example.wechatlesson.view.MainViewGroup 
        	android:id="@id/main_view_group"
        	android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
        ></com.example.wechatlesson.view.MainViewGroup>

</LinearLayout>
